# merlin

./: .gitignore  .gitmodules  CMakeLists.txt
config/: limine.cfg
kernel/: main.cpp  main.h
ld/x86_64/: kernel.ld
scripts/: elevated_helper.sh  make_img.sh  make_iso.sh  make_limine.sh
